--- a/css/base.css
+++ b/css/base.css
@@ -2827,12 +2827,6 @@ html, body, button { font-family: "roboto", "Helvetica Neue", Helvetica, Arial, 
 #hero-slides ul:before { display: none; }
 #hero-slides li { list-style: none; margin: 0; padding: 0; background: none; font-size: 13px; padding-left: 20px; padding-bottom: 5px; }
 #hero-slides li:before { display: none; }
-@media (min-width: 320px) { #hero-slides { display: block; } }
-@media (max-width: 767px) { #hero-slides { top: 0; height: 200px; }
-  #hero-slides .hero-slide img { left: inherit; margin-left: 0; left: 0; vertical-align: middle; }
-  #hero-slides .hero-slide p.credits { top: 2px; bottom: inherit; display: inline; }
-  #hero-slides .hero-slide-text { bottom: 40px; }
-  .no-js #hero-slides { display: none; } }
 @media (min-width: 768px) { #hero-slides { display: block; top: -20px; }
   .no-js #hero-slides { display: none; } }
 @media (max-width: 992px) { #hero-slides .hero-slide img { vertical-align: middle; }
@@ -2881,22 +2875,25 @@ html, body, button { font-family: "roboto", "Helvetica Neue", Helvetica, Arial, 
 /* Banner im Hero-Teil
 /*-----------------------------------------------------------------------------------*/
 #hero.hero-banner { background: url("../img/siegel-zuv.png") no-repeat 95% 20%, #003366; background: url("../img/siegel-zuv.png") no-repeat 95% 20%, -moz-radial-gradient(center, ellipse cover, #0059b3 0%, #003366 100%); background: url("../img/siegel-zuv.png") no-repeat 95% 20%, -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #0059b3), color-stop(100%, #003366)); background: url("../img/siegel-zuv.png") no-repeat 95% 20%, -webkit-radial-gradient(center, ellipse cover, #0059b3 0%, #003366 100%); background: url("../img/siegel-zuv.png") no-repeat 95% 20%, -o-radial-gradient(center, ellipse cover, #0059b3 0%, #003366 100%); background: url("../img/siegel-zuv.png") no-repeat 95% 20%, -ms-radial-gradient(center, ellipse cover, #0059b3 0%, #003366 100%); background: url("../img/siegel-zuv.png") no-repeat 95% 20%, radial-gradient(ellipse at center, #0059b3 0%, #003366 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$color1', endColorstr='$color2',GradientType=1 ); height: auto; margin-bottom: 30px; padding: 0; }
-@media (min-width: 481px) { #hero.hero-banner { height: 142px; } }
+@media (min-width: 768px) { #hero.hero-banner { height: 142px; } }
 
 .banner { position: relative; top: 0px; margin: 0 auto; height: auto; background: #003366; max-width: 1260px; overflow: hidden; -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5); -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5); box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5); }
-@media (min-width: 480px) { .banner { height: 182px; } }
+@media (min-width: 768px) { .banner { height: 182px; } }
 @media (min-width: 992px) { .banner { top: -20px; } }
 .banner .introimg { overflow: hidden; }
 .banner .introimg img { width: auto; max-width: none; height: 100px; }
+@media (max-width: 479px) { .banner .introimg img { height: 120px; margin-left: -30%; } }
 @media (min-width: 480px) { .banner .introimg img { height: auto; width: 100%; max-width: 1260px; } }
 @media (min-width: 768px) { .banner .introimg img { min-height: 182px; width: 1260px; height: auto; } }
 @media (min-width: 992px) { .banner .introimg img { width: 1260px; height: auto; } }
 .banner .introimg p.credits { background: rgba(0, 0, 0, 0.4); color: #ddd; font-size: 14px; line-height: 18px; position: absolute; bottom: 0; right: 0; z-index: 6; margin: 0; padding: 1px 4px; }
-.banner .banner-text { position: absolute; top: 20px; bottom: 20px; left: 0; right: 0; width: 100%; padding: 0px; }
-@media (min-width: 480px) { .banner .banner-text { height: 142px; } }
-.banner .banner-text h1 { color: #fff; background: rgba(0, 51, 102, 0.8); margin: 0; padding: 5px 7px; position: relative; z-index: 10; max-height: 130px; overflow: hidden; display: inline-block; *display: inline; *zoom: 1; }
+.banner .banner-text { position: absolute; top: 20px; bottom: 20px; left: 0; right: 0; width: 100%; padding: 0px; display: none; }
+@media (min-width: 480px) { .banner .banner-text { height: 142px; display: block; } }
+.banner .banner-text h1 { color: #fff; background: rgba(0, 51, 102, 0.8); margin: 0; padding: 5px 7px; position: relative; z-index: 10; max-height: 130px; overflow: hidden; display: none; }
+@media (min-width: 768px) { .banner .banner-text h1 { display: inline-block; *display: inline; *zoom: 1; } }
 .banner .banner-text p.description { font-weight: normal; color: #fff; font-size: 18px; line-height: 25.2px; font-size: 1.125rem; line-height: 1.575rem; display: none; background: rgba(0, 51, 102, 0.8); padding: 5px 7px; margin: 10px 0 0 0; }
-@media (min-width: 480px) { .banner .banner-text p.description { display: block; } }
+@media (min-width: 480px) { .banner .banner-text p.description { display: inline-block; *display: inline; *zoom: 1; } }
+@media (min-width: 768px) { .banner .banner-text p.description { display: block; } }
 
 @media (max-width: 479px) { .page-template-page-start-sub.js-enabled #hero .banner { top: 0; bottom: 0; } }
 .infobar { display: none; }
@@ -2906,7 +2903,7 @@ html, body, button { font-family: "roboto", "Helvetica Neue", Helvetica, Arial, 
 /* Breadcrumb
 /*-----------------------------------------------------------------------------------*/
 #hero.hero-small { background: url("../img/siegel-zuv.png") no-repeat 95% 20%, #003366; background: url("../img/siegel-zuv.png") no-repeat 95% 20%, -moz-radial-gradient(center, ellipse cover, #0059b3 0%, #003366 100%); background: url("../img/siegel-zuv.png") no-repeat 95% 20%, -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #0059b3), color-stop(100%, #003366)); background: url("../img/siegel-zuv.png") no-repeat 95% 20%, -webkit-radial-gradient(center, ellipse cover, #0059b3 0%, #003366 100%); background: url("../img/siegel-zuv.png") no-repeat 95% 20%, -o-radial-gradient(center, ellipse cover, #0059b3 0%, #003366 100%); background: url("../img/siegel-zuv.png") no-repeat 95% 20%, -ms-radial-gradient(center, ellipse cover, #0059b3 0%, #003366 100%); background: url("../img/siegel-zuv.png") no-repeat 95% 20%, radial-gradient(ellipse at center, #0059b3 0%, #003366 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$color1', endColorstr='$color2',GradientType=1 ); }
-#hero.hero-small h1 { padding: 0 0 0 15px; }
+#hero.hero-small h1 { padding: 0; margin-left: 0; }
 @media (min-width: 768px) { #hero.hero-small h1 { padding: 30px 0 10px 0; } }
 
 .hero-meta-portal { position: absolute; top: 30px; right: 100px; text-align: right; color: #0059b3; font-size: 60px; line-height: 50px; display: none; }
@@ -2949,7 +2946,7 @@ h3.breadcrumb_sitetitle { font-size: 14px; font-weight: normal; line-height: 18p
 /*-----------------------------------------------------------------------------------*/
 /* Global content definitions
 /*-----------------------------------------------------------------------------------*/
-#content { padding: 0px; }
+#content { padding: 20px 0 0 0; }
 @media (min-width: 768px) { #content { padding: 20px 0 30px 0; } }
 #content .container { position: relative; }
 #content main { font-size: 16px; line-height: 22.4px; font-size: 1rem; line-height: 1.4rem; color: #444; font-family: "roboto", "Helvetica Neue", Helvetica, Arial, sans-serif; padding-top: 0; }
@@ -2994,9 +2991,12 @@ ul.assistant-tabs-nav li:last-child { border: none; }
 /*-----------------------------------------------------------------------------------*/
 .post-image { text-align: center; margin: 0; float: none; }
 .post-image .post-image-caption { font-size: 14px; line-height: 19.6px; font-size: 0.875rem; line-height: 1.225rem; padding: 10px 0; width: 300px; text-align: left; }
-@media (min-width: 768px) { .post-image { float: right; margin: 20px 0 10px 20px; } }
+@media (max-width: 479px) { .post-image { margin-left: -15px; margin-right: -15px; }
+  .post-image img { width: 100%; height: auto; } }
+@media (min-width: 480px) { .post-image { float: right; margin: 20px 0 10px 20px; } }
 
-.post-meta { display: block; padding: 5px 0; margin: -14px 0 14px 0; color: #003366; font-family: "roboto", "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 14px; line-height: 19.6px; font-size: 0.875rem; line-height: 1.225rem; }
+.post-meta { display: block; padding: 5px 0; margin: 0 0 14px 0; color: #003366; font-family: "roboto", "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 14px; line-height: 19.6px; font-size: 0.875rem; line-height: 1.225rem; }
+@media (min-width: 480px) { .post-meta { margintop: -14px; } }
 
 .meta-footer { font-size: 14px; line-height: 19.6px; font-size: 0.875rem; line-height: 1.225rem; }
 
@@ -3084,6 +3084,7 @@ ul.assistant-tabs-nav li:last-child { border: none; }
 /* News items
 /*-----------------------------------------------------------------------------------*/
 .news-details { margin-top: 20px; }
+@media (max-width: 479px) { .news-details { margin-top: -20px; } }
 .news-details .post-image { margin-top: 0px; }
 .news-details .subtitle { padding-top: 0; }
 .news-details .post-meta-tags { margin-left: 10px; }
@@ -3092,8 +3093,8 @@ ul.assistant-tabs-nav li:last-child { border: none; }
 
 .news-image { display: block; text-align: center; background: none; float: none; margin: 10px auto; }
 .news-image img { -webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none; }
-@media (max-width: 480px) { .news-image img { width: 100%; height: auto; } }
-@media (min-width: 768px) { .news-image { -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3); -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3); box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3); padding: 4px; background: #e9edf2; margin: 5px auto; } }
+@media (max-width: 479px) { .news-image img { width: 100%; height: auto; } }
+@media (min-width: 480px) { .news-image { -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3); -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3); box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3); padding: 4px; background: #e9edf2; margin: 5px auto; } }
 
 .news-item { margin-bottom: 11px; }
 .news-item h2 { padding-bottom: 10px; }
@@ -3106,11 +3107,11 @@ ul.assistant-tabs-nav li:last-child { border: none; }
 
 .thumbnailregion { display: inline; text-align: center; }
 .thumbnailregion .passpartout { width: 100%; text-align: center; }
-@media (max-width: 480px) { .thumbnailregion { padding: 0; margin-bottom: 5px; } }
-@media (min-width: 768px) { .thumbnailregion { width: 220px; }
+@media (max-width: 479px) { .thumbnailregion { padding: 0; margin-bottom: 5px; } }
+@media (min-width: 480px) { .thumbnailregion { width: 220px; }
   .thumbnailregion .passpartout { max-width: 220px; } }
 
-@media (min-width: 768px) { .teaserregion { width: calc(100% - 250px); }
+@media (min-width: 480px) { .teaserregion { width: calc(100% - 250px); }
   .teaserregion p { display: inline; } }
 
 .news-meta-categories { display: inline-block; *display: inline; *zoom: 1; }
