--- a/css/sass/structure/content/_global.scss
+++ b/css/sass/structure/content/_global.scss
@@ -4,7 +4,7 @@
 
 
 #content {
-    padding: 0px;	
+    padding: 20px 0 0 0;	
 
     @media (min-width: $screen-sm) {
 	padding: 20px 0 30px 0;
@@ -26,6 +26,8 @@
 	.sidebar-inline {
 	    @include px2rem($font-size-sidebar);
 	}
+	
+	
     }
   
 }
