--- a/css/sass/structure/hero/_breadcrumb.scss
+++ b/css/sass/structure/hero/_breadcrumb.scss
@@ -7,7 +7,10 @@
 	@include radial-gradient-image($colorPrimaryHero, $colorPrimaryHeroLight, url($siegelurl) no-repeat 95% 20%);
 	
 	h1 {
-	    padding: 0 0 0 15px;
+	    padding: 0;
+	   
+		margin-left: 0;
+	  
 	}
 
 	@media (min-width: $screen-sm ) {
