--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -49,7 +49,7 @@ $PalettonHellste:	desaturate(lighten($colorPrimary, 73%), 75%);
 $PalettonHeller:	desaturate(lighten($colorPrimary, 69%), 75%);
 $PalettonDunkler:	desaturate(lighten($colorPrimary, 10%), 90%);
 $PalettonDunkelste:	desaturate(lighten($colorPrimary, 10%), 40%);
-$siegelurl: '../img/siegel-zuv.png';  
+$siegelurl: '../img/siegel-zuv-schnitt.png';  
 $errorimage:  '../img/friedrich-alexander.gif';  
 
 $colorPrimaryHero:	    $colorPrimary;
@@ -60,7 +60,7 @@ $colorPrimaryHero:	    $colorPrimary;
     $PalettonHeller:	#bfd6f5; // #08C0E7;
     $PalettonDunkler:	#026480;
     $PalettonDunkelste:	#014e63;
-    $siegelurl: '../img/siegel-medfak.png';
+    $siegelurl: '../img/siegel-medfak-schnitt.png';
 
  } @else if $farbfamilie == 'phil' {
     $colorPrimary: $colorPhilFak;
@@ -68,21 +68,21 @@ $colorPrimaryHero:	    $colorPrimary;
     $PalettonHeller:	#d9c689;
     $PalettonDunkler:	#805000;
     $PalettonDunkelste:	#553500;
-    $siegelurl: '../img/siegel-philfak.png';   
+    $siegelurl: '../img/siegel-philfak-schnitt.png';   
  }  @else if $farbfamilie == 'nat' {
     $colorPrimary: $colorNatFak;
     $PalettonHellste:	#e5efea;
     $PalettonHeller:	#aacfbd;
     $PalettonDunkler:	#006e53;
     $PalettonDunkelste:	#00533f;
-    $siegelurl: '../img/siegel-natfak.png';     
+    $siegelurl: '../img/siegel-natfak-schnitt.png';     
  }  @else if $farbfamilie == 'rw' {
     $colorPrimary: $colorRwFak;    
     $PalettonHellste:	#ede7de; // #C9A8AF;
     $PalettonHeller:	#c5ac94; // #bd7d8b;
     $PalettonDunkler:	#690013;
     $PalettonDunkelste:	#42000c;
-    $siegelurl: '../img/siegel-rwfak.png';   
+    $siegelurl: '../img/siegel-rwfak-schnitt.png';   
 
  }  @else if $farbfamilie == 'tf' {
     $colorPrimary: $colorTechFak;    
@@ -90,14 +90,14 @@ $colorPrimaryHero:	    $colorPrimary;
     $PalettonHeller:	#d2d5d7; // #8e949a;
     $PalettonDunkler:	#53606b;
     $PalettonDunkelste:	#3b4956;
-    $siegelurl: '../img/siegel-techfak.png';   
+    $siegelurl: '../img/siegel-techfak-schnitt.png';   
  } @else if $farbfamilie == 'zuv' {
     $colorPrimary: $colorZUV;
     $PalettonHellste:	#dde5f0;
     $PalettonHeller:	#8fb1ef;
     $PalettonDunkler:	#24598f;
     $PalettonDunkelste:	#1f4c7a;
-    $siegelurl: '../img/siegel-zuv.png';     
+    $siegelurl: '../img/siegel-zuv-schnitt.png';     
  }
     
 
