--- a/css/sass/structure/hero/_breadcrumb.scss
+++ b/css/sass/structure/hero/_breadcrumb.scss
@@ -4,7 +4,7 @@
 
 #hero {
     &.hero-small {
-	@include radial-gradient-image($colorPrimaryHero, $colorPrimaryHeroLight, url($siegelurl) no-repeat 95% 20%);
+	@include radial-gradient-image($colorPrimaryHero, $colorPrimaryHeroLight, url($siegelurl) no-repeat 95% bottom);
 	
 	h1 {
 	    padding: 0;
