--- a/css/sass/structure/content/_news-items.scss
+++ b/css/sass/structure/content/_news-items.scss
@@ -124,17 +124,17 @@
    .passpartout {
         width: 100%;
 	text-align: center;
+	@media (min-width: $screen-sm) {
+	    width: 220px; 
+	}
     }
+    padding: 0;
    @media (max-width: $screen-xs - 1) {
-       padding: 0;
        margin-bottom: 5px;
    }
     @media (min-width: $screen-xs) {
 	width: 220px;
-	
-	.passpartout {
-	     max-width: 220px;
-	}
+	margin-left: 15px;
     }
     
 }
@@ -148,6 +148,9 @@
 	  
 	}
     }
+     @media (min-width: $screen-sm ) {
+	 padding-left: 20px;
+     }
 }
 .fullwidthregion {
     @extend .col-xs-12;
