--- a/css/sass/structure/_meta.scss
+++ b/css/sass/structure/_meta.scss
@@ -52,6 +52,7 @@
     @media (min-width: $screen-sm ) {
 	height: 40px;
 	overflow: hidden;
+        padding: 1px 15px 0 15px;
     }
 } 
 .meta-tools {
