--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -165,11 +165,12 @@ $font-size-textbuttons:		14;
 $font-size-linkicon:		13;
 $font-size-hero-links:		13;
 $font-size-hero-bannertext:	18;
+$font-size-link-contentmenu:    13;
 
 $font-size-content-linkicon:	10;
 $font-size-content-listitem:	15;
 
-$font-size-sidebar:		13;
+$font-size-sidebar:		14;
 $font-size-sidebar-listitem:    $font-size-sidebar;
 $font-size-sidebar-events:	$font-size-sidebar;
 $font-size-sidebar-events-month:    9;
