Videoplayer ANpassung (rrze-video muss noch ein fix bekomnmen, zeigt titel nicht an)

--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -188,6 +188,7 @@ $font-size-h1-banner:		28;
 
 $font-size-h2:			24;
 $font-size-h2-small:		22;
+$font-size-h2-socialmedia:	18;
 $font-size-h3:			20; // 18
 $font-size-h3-small:		19;
 $font-size-h3-hero:		18;
