--- a/css/sass/structure/_social-media.scss
+++ b/css/sass/structure/_social-media.scss
@@ -11,9 +11,18 @@
 	    
 	.textwidget, 
 	p, 
-	h2 {
+	h2.small,
+	h2  {
 		color: $colorSocial;
 		padding-top: 0;
+	}
+	
+	h2.small,
+	h2 {
+	    @include px2rem($font-size-h2-socialmedia);
+	    padding: 0;
+	    min-height: 50px;
+	    display: block;
 	}
 	a {
 	    color: $colorSocial;	    
