--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -175,7 +175,8 @@ $font-size-sidebar-listitem:    $font-size-sidebar;
 $font-size-sidebar-events:	$font-size-sidebar;
 $font-size-sidebar-events-month:    9;
 $font-size-sidebar-events-day:	20;
-    
+
+$font-size-socialmedia-morelink:    $font-size-sidebar;
 $font-size-nav-blockquote:	16;
 $font-size-nav-blockquote-cite:	14;
 $font-size-nav-introtext:	15;
