--- a/css/sass/plugins/_cms-workflow.scss
+++ b/css/sass/plugins/_cms-workflow.scss
@@ -110,8 +110,7 @@
 	position: fixed;
 	top: 0;
 	right: 50px;
-	background: white;
 	margin: 4px 0;
-	
+	background-color: transparent;  
     }
 }
