--- a/css/sass/elements/_quotes.scss
+++ b/css/sass/elements/_quotes.scss
@@ -117,6 +117,15 @@ blockquote {
 		    }
 		   
 		}
+		
+	#content .sidebar-inline & {
+	    
+	    @include px2rem($font-size-sidebar);  
+	    p {
+		@include px2rem($font-size-sidebar);  
+	    }
+	}	
+		
 }
 
 
