--- a/css/sass/plugins/_plugins.scss
+++ b/css/sass/plugins/_plugins.scss
@@ -29,8 +29,13 @@
 // RRZE Video
 @import "rrze-video";
 
+// RRZE RSS
+@import "rrze-rss";
+
 // CMS Workflow
 @import "cms-workflow";
+
+
 
 
 // Social Share 
