--- a/css/sass/structure/content/_event-items.scss
+++ b/css/sass/structure/content/_event-items.scss
@@ -1,5 +1,5 @@
 /*-----------------------------------------------------------------------------------*/
-/* Top events and event entries
+/* Top events 
 /*-----------------------------------------------------------------------------------*/
 
 .topevent-widget {
@@ -29,152 +29,8 @@
 	}
 }
 
-/* Events */
-.events-list {
-	padding-bottom: 10px;
-}
-
-.widget_event_widget,
-.events-list {
-	ul {
-		@include no-list;
-
-		li {
-			@include no-list;
-			padding: 10px 0 0 0;
-			min-height: 42px;
-			@include px2rem($font-size-sidebar-events);	
-			background-image: none;
-		}
-	}
-}
-
-.event-date {
-	float: left;
-	display: block;
-	background: $colorPrimary;
-	color: #fff;
-	padding: 5px;
-	width: 45px;
-	text-align: center;
-}
-
-.event-date-month {	
-	@include px2rem($font-size-sidebar-events-month);	
-	text-transform: uppercase;
-	font-weight: bold;
-}
-
-.event-date-day {
-	@include px2rem($font-size-sidebar-events-day);	
-	font-weight: bold;
-}
-
-.event-info {
-	margin-left: 60px;
-	margin-bottom: 10px;
-	padding-bottom: 5px;
-}
-
-.event-title {
-	font-weight: bold;
-}
-
-.event-time {
-	color: $colorPrimary;
-}
-
-.event-location {
-	color: $colorTextLight;
-}
-
-.event-info {
-	a, .event-time {
-		color: $colorText;
-	}
-}
-
-.event-category-fau .event-date {
-	background: $colorZUV;
-    
-}
-.event-category-einrichtungen .event-date {
-	background: $colorDefault;
-}
-
-.event-category-techfak .event-date {
-	background: $colorTechFak;
-}
-
-.event-category-rwfak .event-date {
-	background: $colorRwFak;
-}
-
-.event-category-philfak .event-date {
-	background: $colorPhilFak;
-}
-
-.event-category-natfak .event-date {
-	background: $colorNatFak;
-}
-
-.event-category-medfak .event-date {
-	background: $colorMedFak;
-}
-
-.widget_event_widget a {
-	text-decoration: none;
-	
-	&:hover, &:focus {
-		text-decoration: underline;
-	}
-}
-
-.events-list {
-	ul {
-		@include no-list;
-		
-		li {
-			@include no-list;
-		}
-	}
-}
-
-
-.event-detail-item {
-	margin-bottom: 20px;
-	min-height: 50px;
-	
-	.event-info {
-		margin-left: 70px;
-		font-size: 15px;
-		line-height: 20px;
-		padding-top: 6px;
-	}
-	
-	.event-date {
-		width: 50px;
-		padding: 7px 0;
-	}
-	
-	.event-date-month {
-		font-size: 14px;
-		line-height: 18px;
-	}
-	
-	.event-date-day {
-		font-size: 28px;
-		line-height: 28px;
-	}
-}
-
-
-
 
 @media (max-width: $screen-sm -1) {
-	#content .widget_event_widget .event-info {
-		margin-left: 60px;
-	}
 	.topevent-date,
 	.topevent-description {
 		margin-left: 15px;
