--- a/css/sass/plugins/_fau-person.scss
+++ b/css/sass/plugins/_fau-person.scss
@@ -76,7 +76,7 @@
 	
 	@media (min-width: $screen-sm) {
 	    border: 1px solid $colorStandardHellgrau;
-	    margin: 0;
+	    margin: 0 0 10px 0;
 	    padding: 5px;
         }
 	
