--- a/css/sass/elements/_general-classes.scss
+++ b/css/sass/elements/_general-classes.scss
@@ -70,6 +70,8 @@
 
 .aligncenter {
 	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .alignleft {
@@ -92,6 +94,8 @@ div.alignright {
 
 div.aligncenter {
 	margin-bottom: 10px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 
