Zusatz-Textbereich im SLider verkürzt auf 10/12, damit es keine Überlagerung mit Slider-Steuerung kommt

--- a/css/sass/structure/hero/_slider.scss
+++ b/css/sass/structure/hero/_slider.scss
@@ -119,10 +119,12 @@
 
 }
 
-
-.slider-titel, .slider-text {
+.slider-titel {
    @extend .col-xs-12;
-
+}
+.slider-text {
+   @extend .col-xs-12;
+   @extend .col-sm-10;
 }
 
 
